2003-08-12  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c: Apply linewidth changes directly to pm3d mode (fixes
	bug that linewidths in pm3d were one plot late in being applied).

2003-08-05  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* demo/Makefile.am.in: Add equipo2.dat, field2xy.dat to CLEANFILES.

2003-08-05  Shigeharu TAKENO  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fix misprints in gnuplot manual (#11).

2003-08-04  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c term/x11.trm docs/gnuplot.doc:  Honor explicit request
	for "bold" or "medium" font weight when parsing X11 font requests.

2003-07-31  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c:  Fix incorrect bracketing of switch statement entries
	introduced way back in Dec 2000. This fixes the "x11 clipboard" bug.

2003-07-27  Ethan Merritt <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/titlepag.tex: This is a first pass at updating
	the "What is New" section to reflect changes since version 3.7. I also
	slightly re-arranged the sections on mousing, and added my name to the
	list of contributers.

2003-07-27  Ethan Merritt <merritt@u.washington.edu>

	* src/command.c src/mouse.c docs/gnuplot.doc: Report key modifiers
	active at the time of a mouse click in variables MOUSE_SHIFT,
	MOUSE_ALT, and MOUSE_CTRL.

2003-07-23  Ethan Merritt <merritt@u.washington.edu>

	* configure.in: Rename the configuration option for Jaime Reed's
	'defined(var)' code, and enable it by default.  The option is now
	./configure --disable-defined-var

	* show.c: Move listing of undefined variables to an FPRINTF.

2003-07-22  Ethan Merritt <merritt@u.washington.edu>

	* src/command.c src/command.h src/mouse.c:
	Add a new user command 'pause mouse {"text"}'.  On mouse-capable
	terminals the pause will terminate on either a mouse click or on
	a <cr>; for all other terminals it is treated as 'pause -1'.

	* src/parse.c src/parse.h: Add a new function get_udv(key) that can